@@ -10,10 +10,12 @@ def register():
         EndorsementPart,
         EndorsementPartyField,
         EndorsementAddressField,
+        EndorsementRelationField,
         Party,
         Address,
         EndorsementParty,
         EndorsementPartyAddress,
+        EndorsementPartyRelation,
         Endorsement,
         ChangePartyBirthDate,
         AddressDisplayer,
@@ -21,6 +23,8 @@ def register():
         ChangePartySSN,
         PartyNameDisplayer,
         ChangePartyName,
+        ChangePartyRelationship,
+        RelationDisplayer,
         SelectEndorsement,
         Contract,
         module='endorsement_party', type_='model')
