@@ -1,0 +1,13 @@
+<?xml version="1.0"?>
+<form string="Change Party Relations">
+    <group id="endorsement_info" colspan="2">
+        <label name="effective_date"/>
+        <field name="effective_date"/>
+        <label name="endorsement_part"/>
+        <field name="endorsement_part"/>
+        <label name="endorsement_definition"/>
+        <field name="endorsement_definition"/>
+    </group>
+    <newline/>
+    <field name="displayers" colspan="4"/>
+</form>
