@@ -1,3 +1,4 @@
+* Manage party relation endorsement
 * Change Party Name endorsement handles several parties.
 
 Version 1.4 - 2015-05-29
